# SpecGate

./: .gitignore  README.md
development/mcp-server/: README.md  demo-mcp.json  demo-setup.md  fastmcp.json  github_client.py  hitl_manager.py  pyproject.toml  requirements.txt  server.py
development/mcp-server/confluence/: __init__.py  client.py  service.py  transformer.py
development/mcp-server/confluence_fetch/: client.py  service.py  transformer.py
development/mcp-server/html_to_md/: converter.py  validator.py
development/mcp-server/htmlconverter/: __init__.py  parser.py
development/mcp-server/integrations/github/: __init__.py  client.py
development/mcp-server/speclint/: __init__.py
development/mcp-server/speclint/analyzers/: analyzer.py
development/mcp-server/speclint/core/: __init__.py  speclint.py
development/mcp-server/speclint/scorers/: __init__.py  scorer.py
development/mcp-server/speclint/suggestors/: __init__.py  suggester.py
development/mcp-server/speclint/validators/: __init__.py  validator.py
development/mcp-server/speclint_lint/: __init__.py
development/mcp-server/speclint_lint/analyzers/: __init__.py  analyzer.py
development/mcp-server/speclint_lint/core/: __init__.py  speclint.py
development/mcp-server/speclint_lint/scorers/: scorer.py
development/mcp-server/speclint_lint/suggestors/: suggester.py
development/mcp-server/speclint_lint/utils/: __init__.py  rules.py
development/mcp-server/speclint_lint/validators/: validator.py
development/mcp-server/tests/: TEST_README.md  __init__.py
(+80 files in other folders)
