[project]
name = "specgate-mcp-server"
version = "1.0.0"
description = "SpecGate MCP Server for Phase 1"
dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

